initializing signin/signup structures (routes & services) for authentification

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-api-tutorial",
+  "name": "nestjs-api-bookmarks",
   "version": "0.0.1",
   "description": "",
   "author": "",
